# xlschema

./: .gitignore  .pylintrc  CHANGELOG.md  CLAUDE.md  LICENSE  LICENSE.md  MANIFEST.in  Makefile  README.md  TODO.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
docs/: Makefile  conf.py  devguide.rst  index.rst  userguide.rst
docs/api/: common.rst  config.rst  core.rst  depends.rst  fields.rst  index.rst  models.rst  namespaces.rst  plugins.rst  readers.rst  uri.rst  writers.rst
docs/uml/: class-asis-flow.puml  class-asis.puml  class-flow.puml  class-tobe-flow.puml  class-tobe.puml  metamodel.puml
scripts/: clean.sh  common.sh  coverage.sh  docs.sh  mkvenv.sh  qcheck.sh  remove_emojis.py  reset.sh  run_all.sh  uml.sh  upgrade.sh
src/xlschema/: config.py  depends.py  models.py  uri.py
tests/: conftest.py  demo.py
tests/data/: config.yml
tests/scratch/: test_architecture.py  test_demo.py  test_mock.py  test_recipe.py
tests/unit/: test_api_app.py  test_api_cmdline.py  test_api_new.py  test_common_import_manager.py  test_common_log.py  test_common_log_yaml.py  test_common_templating.py  test_common_text.py  test_config.py  test_converters.py  test_converters_db.py  test_converters_xlsx.py  test_converters_xlsx_sheets.py  test_converters_yaml.py  test_depends.py  test_ext_appsettings.py  test_ext_appsettings_parser.py  test_fields.py  test_models.py  test_namespaces_djapp.py  test_options_easy.py  test_options_normalize.py  test_plugin_display.py  test_plugin_splitter.py  test_plugin_sqlacodegen.py  test_plugins.py  test_schema.py  test_uri.py  test_writers.py  test_writers_excel.py  test_writers_mako.py  test_writers_postgres_docker.py  test_writers_sqlite.py  test_writers_templates.py
xlschema/: .xlschema.yml  __init__.py  __main__.py  config.py  depends.py  namespaces.py
xlschema/common/: context_managers.py  dict.py  log.py  mixins.py  text.py
xlschema/fields/: __init__.py  constants.py  sap.py
xlschema/plugins/: __init__.py  cmdline.py  core.py  display.py  splitter.py
xlschema/readers/: abstract.py
xlschema/writers/: csv.py  (+7 more)
(+126 files in other folders)
