[project]
name = "xlschema"
version = "0.3.15"
description = "Generate relational model code from yaml/xlsx/db_uri"
authors = [
    { name = "Shakeeb Alireza", email = "shakeeb.alireza@rezayat.net" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorlog>=6.9.0",
    "mako>=1.3.10",
    "openpyxl>=3.1.5",
    "pyyaml>=6.0.2",
    "sqlalchemy==1.4.54",
]

[dependency-groups]
dev = [
    "factory-boy>=3.3.3",
    "faker>=37.8.0",
    "hypothesis>=6.139.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-html>=4.1.1",
    "pytest-mock>=3.15.1",
    "pytest-sugar>=1.1.1",
    "sphinx>=8.2.3",
    "sphinx-autodoc-typehints>=3.2.0",
    "sphinx-git>=11.0.0",
    "sphinxcontrib-programoutput>=0.18",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]


[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"
